# Hacker-Package-Manager

./: .gitignore  Cargo.toml  LICENSE  README.adoc  README.md  build.hacker  build.hl
Community/: repo.json
HackerOS-Updater/: main.cr  shard.yml
apt-fronted/: Cargo.toml  display.py  go.mod  main.go  main.py
apt-fronted/src/: main.rs
cli/: shard.yml
cli/src/: main.cr
community-repo/: repo.hacker
community/repo/: repo.hacker
community/source-code/: go.mod  main.go
hacker/: Cargo.toml
hacker-docs/: go.mod  main.go
hacker-help/: main.go
hacker-select/: go.mod  main.go
hacker-shell/: main.py
hacker/example-plugin-files/: dev-tools.yaml
hacker/src/: commands.rs  game.rs  help.rs  lib.rs  main.rs  utils.rs
repo/: repo.json
source-code/apt-fronted/: Cargo.toml  main.py
source-code/apt-replacement/: Cargo.toml  main.cpp
source-code/apt-replacement/src/: main.rs
source-code/backend/: Cargo.toml  build.zig  main.odin  main.zig
source-code/backend/src/: main.rs  manifest.rs  sandbox.rs  state.rs  verify.rs
source-code/cli/: install.odin  main.odin  other_commands.odin  remove.odin  repo.odin  shard.yml  state.odin  update.odin  utils.odin
source-code/cli/src/: main.cr
source-code/tui/: go.mod
src/: app.rs  main.rs
tui/: Cargo.toml  main.go
tui/src/: ui.rs
