[package]
[package]
name = "backend"
version = "0.7.0"
edition = "2021"

[dependencies]
hk-parser = "0.2.1"
indexmap = "2.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
landlock = "0.3"
nix = { version = "0.29", features = ["fs", "mount", "process", "sched", "user"] }
# Zmieniono z 0.3 na 0.1.2, ponieważ 0.3 nie istnieje na crates.io
seccomp = "0.1.2"
anyhow = "1.0"
