[package]
name = "backend"
version = "0.7.0"
edition = "2021"

[dependencies]
hk-parser = "0.2.1"
indexmap = "2.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
landlock = "0.3"
nix = { version = "0.29", features = ["fs", "mount", "process", "sched", "user"] }
# Changed from 0.3 to 0.1.2 as per original comments/errors
seccomp = "0.1.2"
anyhow = "1.0"
hex = "0.4"
